--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     
     <div id="soundcloud-player" style="visibility: hidden;">
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/petecurry/sonic-in-the-holobeach&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"></iframe>
     </div>
     <script src="musicwall.js"></script>
 </body>
